--- a/Contact.html
+++ b/Contact.html
@@ -57,7 +57,7 @@ We look forward to seeing you at TRESS HAVEN .
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="Contact.html">Conatact</a>
+                    <a class="nav-link link text-black display-4" href="Contact.html">Contact</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="Gallery.html">Our work</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0451 480 249 ">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -67,7 +67,7 @@ We look forward to seeing you at TRESS HAVEN .
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap responsive templates</a></section><section class="mbr-section form4 cid-qXbTZT0eBs" id="form4-9">
+<section class="engine"><a href="https://mobirise.me/n">free landing page html templates</a></section><section class="mbr-section form4 cid-qXbTZT0eBs" id="form4-9">
 
     
 
@@ -101,7 +101,7 @@ We look forward to seeing you at TRESS HAVEN .
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iXqiMm4QwtS5tal2cn8Au6S+zX8VC3dBkeoOLv46v/2jtSIAdkcHwMUSpqumluCr+IJNvvUetorLJwGGo3hh84GeAiNpt9I3pZVP+8gl78Om2a4AV/ZgjOz6yNWdpM0B" data-form-field="Email">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DqdKpxSKOs7gqkxWFnlezyUBz3D5DmgM3PBk3f3dNXyoXfOXHxQJF2RWNViS9g3y+u0CLluJGDtS/hLwoLUnzWGiBJC4AoiKoJnMfHxwtu8aS9/cn7G65Umqj5TGujt7" data-form-field="Email">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-9">
