--- a/Gallery.html
+++ b/Gallery.html
@@ -14,10 +14,11 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/slick.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/gallery/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -55,7 +56,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="Contact.html">Conatact</a>
+                    <a class="nav-link link text-black display-4" href="Contact.html">Contact</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="Gallery.html">Our work</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0451 480 249 ">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -65,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">website builder</a></section><section class="header10 cid-r1MWZv3bZw mbr-fullscreen mbr-parallax-background" id="header10-1q">
+<section class="engine"><a href="https://mobirise.me/i">free web creation software</a></section><section class="header10 cid-r1MWZv3bZw mbr-fullscreen mbr-parallax-background" id="header10-1q">
 
     
 
@@ -88,14 +89,20 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-slider-carousel cid-qXcmNAl91l" id="gallery3-h">
-
-    
-
-    <div>
-        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-h" data-slide-to="0" data-toggle="modal"><img src="assets/images/unnamed-1-750x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery3-h" data-slide-to="1" data-toggle="modal"><img src="assets/images/29216895-184041152207131-3219834503891517440-n-960x960-800x800.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Creative"><div href="#lb-gallery3-h" data-slide-to="2" data-toggle="modal"><img src="assets/images/29683547-187666271844619-4135511436941086851-n-720x960-720x960.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Animated"><div href="#lb-gallery3-h" data-slide-to="3" data-toggle="modal"><img src="assets/images/29244351-184031852208061-7602651009424293888-n-720x960-720x960.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-h" data-slide-to="4" data-toggle="modal"><img src="assets/images/29216342-184041145540465-3100850994825658368-n-720x960-720x960.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-h" data-slide-to="5" data-toggle="modal"><img src="assets/images/unnamed-8-750x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-h" data-slide-to="6" data-toggle="modal"><img src="assets/images/unnamed-4-750x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-h" data-slide-to="7" data-toggle="modal"><img src="assets/images/unnamed-6-750x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--pNaN" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-h" data-slide-to="8" data-toggle="modal"><img src="assets/images/unnamed-7-748x748.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-h"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/unnamed-1.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/29216895-184041152207131-3219834503891517440-n-960x960.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/29683547-187666271844619-4135511436941086851-n-720x960.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/29244351-184031852208061-7602651009424293888-n-720x960.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/29216342-184041145540465-3100850994825658368-n-720x960.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/unnamed-8.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/unnamed-4.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/unnamed-6.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/unnamed-7.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-h"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-h"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="7822436461.727bfe1.8c3d7ee42eba4766ab25abf99e422b2e" data-per-row-grid="4" id="instagram-feed-block-1s" data-rv-view="73" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(239, 239, 239);">
     </div>
-
+    <div class="container container_toggle">
+        <div class="row">
+            <div class="col">
+                <div class="inst">
+                    <h1 class="inst__title align-center mbr-fonts-style display-2"></h1>
+                    <div class="inst__content"></div>
+                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="mbr-section content8 cid-qXcnLhFrIy" id="content8-i">
@@ -165,17 +172,12 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/masonry/masonry.pkgd.min.js"></script>
-  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/index.js"></script>
+  <script src="assets/slick.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/gallery/player.min.js"></script>
-  <script src="assets/gallery/script.js"></script>
-  <script src="assets/slidervideo/script.js"></script>
   
   
 </body>
