--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="Contact.html">Conatact</a>
+                    <a class="nav-link link text-black display-4" href="Contact.html">Contact</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="Gallery.html">Our work</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0451 480 249 ">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/o">one page web templates</a></section><section class="header10 cid-qY8zFO5VrK mbr-fullscreen" id="header10-r">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="header10 cid-qY8zFO5VrK mbr-fullscreen" id="header10-r">
 
     
 
