--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="Contact.html">Conatact</a>
+                    <a class="nav-link link text-black display-4" href="Contact.html">Contact</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="Gallery.html">Our work</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:0451 480 249 ">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/q">free responsive website templates</a></section><section class="header1 cid-qYYG6zsiOa mbr-fullscreen mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.me/c">free web builder</a></section><section class="header1 cid-qYYG6zsiOa mbr-fullscreen mbr-parallax-background" id="header1-w">
 
     
 
@@ -323,7 +323,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/29216895-184041152207131-3219834503891517440-n-960x9602.jpg" alt="Mobirise" title="Treatment ">
+                        <img src="assets/images/29216895-184041152207131-3219834503891517440-n-960x960.jpg" alt="Mobirise" title="Treatment ">
                     </div>
                     <div class="card-box">
                         
